--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@
 /@xen-orchestra/log/src/transports/index.js
 
 /@xen-orchestra/proxy/src/main/mixins/index.js
+/@xen-orchestra/proxy/.xo-proxy.*
+/@xen-orchestra/proxy/proxy.db
 
 /packages/vhd-cli/src/commands/index.js
 
